--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-dom": "^16.4.2",
     "react-native": "0.61.5",
     "react-native-alert-async": "^1.0.3",
-    "react-native-cache": "https://github.com/michaeltout/react-native-cache.git#f2e197fe8459d8a5651099f15475510317e30ba3",
+    "react-native-cache": "https://github.com/michaeltout/react-native-cache.git",
     "react-native-camera": "^3.22.1",
     "react-native-country-picker-modal": "^1.5.2",
     "react-native-crypto": "^2.1.2",
@@ -104,7 +104,7 @@
     "react-native-text-input-mask": "^2.0.0",
     "react-native-udp": "^2.3.1",
     "react-native-vector-icons": "^6.2.0",
-    "react-native-verus-light-client": "git+https://github.com/VerusCoin/react-native-verus-light-client",
+    "react-native-verus-light-client": "git+https://github.com/michaeltout/react-native-verus-light-client#db79807c257fd7c58720de3c12b78c54584ce245",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-redux": "^5.0.6",
